Closed Bug 167131 Opened 22 years ago Closed 22 years ago

Replying to message causes remote images to load when load remote is disabled

Categories

(MailNews Core :: Composition, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.3alpha

People

(Reporter: pridge, Assigned: bugzilla)

References

Details

(Whiteboard: have fix)

Attachments

(1 file)

Mozilla 1.1 (Gecko/20020827)

To reproduce:

1. In Preferences, Privacy & Security, Images, set "Do not load images in Mail &
Newsgroup messages".

2. In Mail & Newsgroups Account Settings, set "Compose message in HTML format".

3. In Preferences, Mail & Newsgroups, Composition, set "Automatically quote the
original message when replying".

4. Select an HTML message that contains remote images. (Preview shows message
without images as expected.)

5. Reply to the message.

Actual result: Quoted message retrieves remote images and displays them in the
composition window.

Expected result: Quoted message appears without remote images in composition window.
accepting...Looks like I did not think about that case :-)
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → mozilla1.3alpha
*** Bug 172314 has been marked as a duplicate of this bug. ***
Thanks Jo... but I will just mention here that this applies to forwarding
messages as well.
That's true, it does affect forwarding messages too. I should've thought of that.
Whiteboard: have fix
Attached patch Proposed fix, v1Splinter Review
There was 2 issues:

1) the content-base for the mailcompose window is about:blank, therefore the
test ShouldBlockImageByScheme will always return false which will prevent the
block image feature to work in that case. But the fact we check the sheme of
the base URL doesn't make any sense as the location seems to always contains a
full URL (BTW, if that wasn't the case, we would failed ealier in the function
because we check for the sheme of the image URL to be either http or https)! I
put a comment in the code about that a while ago. The solution is to just
remove that test which by the way will speed up a little bit the process.

2) The application type of the compose window isn't set therefore the specific
code for mail window won't work. The solution is to set the application type.
The message compose window will then observe some other specif mailnews
security check line JS in mail (but JS is disable anyway in editor already).
Comment on attachment 105921 [details] [diff] [review]
Proposed fix, v1

r=morse
Attachment #105921 - Flags: review+
Comment on attachment 105921 [details] [diff] [review]
Proposed fix, v1

sr=sspitzer
Attachment #105921 - Flags: superreview+
Fix checked in the trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Using trunk build 20021125 on winxp, macosx and linux this is fixed.  The
compose window for Reply, Forward Inline does not show the image when composing.
 Verified
Status: RESOLVED → VERIFIED
Product: MailNews → Core
This bug is occurring on Thunderbird. I didn't notice it earlier (since I rarely
reply to HTML mails with images in them) but have confirmed it with Thunderbird
1.0.4 on Windows (sorry don't have the build number; it's the current 1.0.4
release) and Thunderbird 1.0 (20041206) so it's been around a while.

Should this bug be reopened or a new one filed for Thunderbird? Bug 280347 is
different because it's concerned with regular viewing.

To reproduce:

1. In Preferences, Advanced, Privacy, set "Block loading of remote images in
mail messages" and set "Allow remote images if sender is in my" Personal Address
Book.

2. In Account Settings, Composition & Addressing set "Compose message in HTML
format".

3. In Account Settings, Composition, set "Automatically quote the
original message when replying".

4. Select an HTML message that contains remote images. Make sure that the
address of the sender is not in the address book select in step #1. (Preview
shows message without images as expected.)

5. Reply to the message (or Forward As Inline).

Actual result: Quoted message retrieves remote images and displays them in the
composition window.

Expected result: Quoted message appears without remote images in composition window.
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: