Fix for bug 167131. Not not display remote image in message compose when setting is on. R=morse, SR=sspitzer